--- a/src/Header.css
+++ b/src/Header.css
@@ -7,6 +7,8 @@
   padding-top: 10px;
   padding-bottom: 10px;
   width: 100%;
+  background-color: white;
+  margin-bottom: 10px;
 }
 .header__left {
   display: flex;
