--- a/src/SideBar.css
+++ b/src/SideBar.css
@@ -1,4 +1,5 @@
 .sidebar {
+  
   position: sticky;
   top: 80px;
   flex: 0.2;
@@ -42,8 +43,8 @@
   margin-bottom: 10px;
   border: 1px solid lightgray;
   background-color: white;
-  border-top-left-radius: 10px;
-  border-top-right-radius: 10px;
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
 }
 .sidebar__stat {
   margin-top: 10px;
