--- a/src/SideBar.css
+++ b/src/SideBar.css
@@ -1,5 +1,4 @@
 .sidebar {
-  
   position: sticky;
   top: 80px;
   flex: 0.2;
@@ -71,15 +70,13 @@
   margin-top: 10px;
 }
 
-.sidebar__bottom  > p 
-{
+.sidebar__bottom > p {
   font-size: 13px;
   padding-bottom: 10px;
 }
 
-.sidebar__recentItem
-{
-  display:flex;
+.sidebar__recentItem {
+  display: flex;
   font-size: 13px;
   color: gray;
   font-weight: bolder;
@@ -87,16 +84,14 @@
   margin-bottom: 5px;
   padding: 5px;
 }
-.sidebar__recentItem:hover{
+.sidebar__recentItem:hover {
   background-color: whitesmoke;
   border-radius: 10px;
   cursor: pointer;
   color: black;
 }
 
-.sidebar__hash
-{
+.sidebar__hash {
   margin-right: 10px;
   margin-left: 5px;
-
 }
